# tcc_realestate

./: .RData  .Rhistory  .env  .gitattributes  .gitignore  .~lock.aracaju.csv#  .~lock.joao_pessoa.csv#  .~lock.marica.csv#  .~lock.sao_jose_ribamar.csv#  Dockerfile  Dockerfile-dash  Makefile  README.md  \  aracaju.csv  belem.csv  boa_vista.csv  docker-compose.yml  find_proxies.py  garanhuns.csv  info.csv  joao_pessoa.csv  marica.csv  proxies.py  proxies.txt  pyproject.toml  recife.csv  requirements.txt  roraima.csv  sao_jose_ribamar.csv  scrapy.cfg  sjr.csv  teste.csv  zap.csv  zap.jsonl
.scrapy/httpcache/zap/15/1520fa9f70d1f33b2fb86f4784e56c05efb981f8/: meta  (+3 more)
api/modelagem/modelo_jp/: jp.R
app/: api.py  main.py  models.py  step.py
app/api/: api.py  api_method.py  database.py  get_db_data.py  models.py  predict_model.py  step.py
app/dash/: __init__.py  main.py
app/dash/pages/: about.py  info_pred.py  navbar.py  visualize_jp_places.py
app/modeling/: api.py  main.py  modeling.html  modeling.ipynb  optim.py  step.py  utils.py
app/modeling/pages/: about.py  visualize_jp_places.py
app/modeling/study_pkl/: ice_pdp.pkl  study_gdt.pkl  study_lgbm.pkl
app/pages/: about.py  info_pred.py  navbar.py
app/study_pkl/: study_rf.pkl  study_xgb.pkl
data/: .~lock.joao_pessoa.csv#  .~lock.rio-branco.csv#  ananindeua.csv  bayeux-venda.csv  bayeux.csv  boa-vista.csv  cabedelo.csv  campo-grande.csv  cuiaba.csv  garanhuns.csv  joao-pessoa-aluguel.csv  macapa  macapa.csv  maceio.csv  natal-aluguel.csv  natal.csv  palmas.csv  porto-velho.csv  recife-venda.csv  rio-branco-aluguel.csv  rio-branco.csv  santo-amaro-do-maranhao.csv  sao-luis.csv  teresina.csv
data/cleaned/: .~lock.jp_limpo_bairro_correto.csv#  test.csv  train.csv
modeling/: model.py  modeling.ipynb  step.py
nginx/: nginx.conf
scraping_examples/: packages.csv  scrapy.cfg
scraping_examples/scraping_example_r/: scraping_r.r
scraping_examples/scraping_examples/: items.py  middlewares.py  pipelines.py  settings.py
scraping_examples/scraping_examples/spiders/: packagescraper.py
scrapy_zap/: get_url_playwright.py  get_url_with_playwright.py  items.py  middlewares.py  pipelines.py  settings.py
scrapy_zap/spiders/: .zap_imoveis.py.swp  viva.py  zap_imoveis.py
scripts/: clean.py  geocode  geocode.R  limpeza.py  script
tcc_escrita/: TCC.aux  TCC.ipynb  TCC.loa  TCC.qmd  TCC.rmarkdown  TCC.tex  TCC.toc  custom.theme  modeling.ipynb
tcc_escrita/.jupyter_cache/: global.db
tcc_escrita/.jupyter_cache/executed/00dccc88f2e742bb522a5439d9928f3b/: base.ipynb
tcc_escrita/.jupyter_cache/executed/01d8ad10b4cc8874816cc7c3051858bd/: base.ipynb
tcc_escrita/.jupyter_cache/executed/028af836c65c40a31186e0dcde86c5f0/: base.ipynb
tcc_escrita/.jupyter_cache/executed/032ecdbf0f42a7cdf512c0be909de31a/: base.ipynb
tcc_escrita/.jupyter_cache/executed/0b12d3ca24f0e26c170de18ef81ad5e9/: base.ipynb
tcc_escrita/TCC_cache/pdf/: unnamed-chunk-1_1df88ba0d75b77156e91edf1ff871c98.RData
tcc_escrita/includes/: before-body.tex  bib.bib  pdf_config.sty  script1.r  ufpe-abnt.csl
tcc_escrita/presentation/: custom.scss  index-speaker.html  index.qmd  style.scss
tcc_escrita/study_pkl/: study_gdt_new_var.pkl  study_gdt_new_var2.pkl  study_lgbm_new_var.pkl  study_lgbm_new_var2_no_imputation.pkl  study_lgbm_no_24.pkl  study_rf_new_var.pkl  study_xgb_new_var.pkl  study_xgb_new_var2.pkl  study_xgb_no_impute.pkl
(+58 files in other folders)
