[tool.poetry]
name = "scrapy-zap"
version = "0.1.0"
description = "raspando dados do zap imoveis"
authors = ["gabrielpereira12345 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"
packages = [{include = "scrapy_zap"}]

[tool.poetry.dependencies]
python = "^3.10"
w3lib = ">=2.1.1,<2.2.0"
unidecode = ">=1.3.6,<1.4.0"
scrapeops-scrapy-proxy-sdk = "^1.0"
attrs = ">=19.1.0"
websockets = "^11.0.3"
asyncio = ">=3.4.3,<3.5.0"
scrapy-playwright = ">=0.0.27,<0.1.0"
pylint = "^2.17.5"
geopy = ">=2.3.0,<2.4.0"
pandas = ">=2.0.3,<2.1.0"
proxybroker2 = ">=2.0.0a4,<2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
