[tool.poetry]
name = "scrapy-zap"
version = "0.1.0"
description = "raspando dados do zap imoveis"
authors = ["gabrielpereira12345 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"
packages = [{include = "scrapy_zap"}]

[tool.poetry.dependencies]
python = "^3.10"
w3lib = ">=2.1.1,<2.2.0"
unidecode = ">=1.3.6,<1.4.0"
scrapeops-scrapy-proxy-sdk = "^1.0"
attrs = ">=19.1.0"
websockets = "^11.0.3"
asyncio = ">=3.4.3,<3.5.0"
scrapy-playwright = ">=0.0.27,<0.1.0"
pylint = "^2.17.5"
geopy = ">=2.3.0,<2.4.0"
pandas = ">=2.0.3,<2.1.0"
proxybroker2 = ">=2.0.0a4,<2.1.0"
scikit-learn = ">=1.5.0,<1.6.0"
lightgbm = ">=4.3.0,<4.4.0"
seaborn = ">=0.13.2,<0.14.0"
optuna = ">=3.6.1,<3.7.0"
ipywidgets = "^8.1.3"
plotly = ">=5.22.0,<5.23.0"
nbformat = ">=5.10.4,<5.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
